Fix stats speed via index and synchronize it so the db doesn't get killed on server startup
git-svn-id: file:///home/svn/DVA2006@5472 1e6d2d28-e1fb-0310-b8ab-81908d8c6b6a